@@ -1,3 +1,4 @@
 	.text
+	.global text
 text:
 	.long 0
