@@ -5,5 +5,5 @@
 #...
 0*8000000 . _START
 #...
-0*8000000 t text
+0*8000000 T text
 #pass
